syntax = "proto2";

package snowcap.layer.v0alpha1;

import "snowcap/widget/v0alpha1/widget.proto";
import "google/protobuf/empty.proto";

enum Anchor {
  ANCHOR_UNSPECIFIED = 0;
  ANCHOR_TOP = 1;
  ANCHOR_BOTTOM = 2;
  ANCHOR_LEFT = 3;
  ANCHOR_RIGHT = 4;
  ANCHOR_TOP_LEFT = 5;
  ANCHOR_TOP_RIGHT = 6;
  ANCHOR_BOTTOM_LEFT = 7;
  ANCHOR_BOTTOM_RIGHT = 8;
}

enum KeyboardInteractivity {
  KEYBOARD_INTERACTIVITY_UNSPECIFIED = 0;
  KEYBOARD_INTERACTIVITY_NONE = 1;
  KEYBOARD_INTERACTIVITY_ON_DEMAND = 2;
  KEYBOARD_INTERACTIVITY_EXCLUSIVE = 3;
}

enum Layer {
  LAYER_UNSPECIFIED = 0;
  LAYER_BACKGROUND = 1;
  LAYER_BOTTOM = 2;
  LAYER_TOP = 3;
  LAYER_OVERLAY = 4;
}

message NewLayerRequest {
  optional snowcap.widget.v0alpha1.WidgetDef widget_def = 1;
  optional uint32 width = 2;
  optional uint32 height = 3;
  optional Anchor anchor = 4;
  optional KeyboardInteractivity keyboard_interactivity = 5;
  optional int32 exclusive_zone = 6;
  optional Layer layer = 7;
}

message NewLayerResponse {
  optional uint32 layer_id = 1;
}

message CloseRequest {
  optional uint32 layer_id = 2;
}

service LayerService {
  rpc NewLayer(NewLayerRequest) returns (NewLayerResponse);
  rpc Close(CloseRequest) returns (google.protobuf.Empty);
}
